@@ -461,8 +461,9 @@ public:
   CStdString GetMusicArtistThumbFolder() const;
   CStdString GetVideoThumbFolder() const;
   CStdString GetBookmarksThumbFolder() const;
-  CStdString GetXLinkKaiThumbFolder() const;
   CStdString GetPicturesThumbFolder() const;
+  CStdString GetProgramsThumbFolder() const;
+  CStdString GetXLinkKaiThumbFolder() const;
   
 protected:
   void GetInteger(const TiXmlElement* pRootElement, const char *strTagName, int& iValue, const int iDefault, const int iMin, const int iMax);
