@@ -1,18 +1,34 @@
 #include "stdafx.h"
 #include "ThumbLoader.h"
 
-CThumbLoader::CThumbLoader()
+CVideoThumbLoader::CVideoThumbLoader()
 {
 }
 
-CThumbLoader::~CThumbLoader()
+CVideoThumbLoader::~CVideoThumbLoader()
 {
 }
 
-bool CThumbLoader::LoadItem(CFileItem* pItem)
+bool CVideoThumbLoader::LoadItem(CFileItem* pItem)
 {
   if (pItem->m_bIsShareOrDrive) return true;
   if (!pItem->HasThumbnail())
     pItem->SetUserVideoThumb();
   return true;
 };
+
+CProgramThumbLoader::CProgramThumbLoader()
+{
+}
+
+CProgramThumbLoader::~CProgramThumbLoader()
+{
+}
+
+bool CProgramThumbLoader::LoadItem(CFileItem *pItem)
+{
+  if (pItem->m_bIsShareOrDrive) return true;
+  if (!pItem->HasThumbnail())
+    pItem->SetUserProgramThumb();
+  return true;
+}
